# kappa

./: .appveyor.yml  .doxygen.in  .doxygenconfig  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Doxyfile.in  README.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  build_issue.md  coupling_issue.md  feature_request.md  submit_question.md
.github/workflows/: cmake.yml
cmake/: CodeCoverage.cmake  FindArmadillo.cmake  FindBlasLapack.cmake  FindCatch2.cmake  FindGcov.cmake  FindLcov.cmake  FindYaml.cmake
data/: interaction.yaml  particles.yaml
data/mixtures/: N2.mix  N2ions.mix  N2r.mix  N2simple.mix  NO.mix  O2.mix  O2r.mix  air11.mix  air13.mix  air5.mix  air5r.mix  argon.mix
data/species/: Ar.spc  C.spc  C2.spc  C4H6.spc  CO.spc  CO2.spc  H.spc  H2.spc  H2O.spc  N.spc  N2.spc  NO.spc  O.spc  O2.spc  OH.spc
docs/: .doxygenconfig  Doxyfile  bibliography.bib  conf.py  exceptions.rst  index.rst  introduction.rst  mainpage.txt  makefile  mixture.rst  particles.rst
docs/_build/doctrees/: approximations.doctree  environment.pickle  exceptions.doctree  index.doctree  installation.doctree  interaction.doctree  interactions.doctree  introduction.doctree  mixture.doctree  particles.doctree
docs/_build/doctrees/install/: dependencies.doctree
docs/_build/doctrees/tutorials/: approximations.doctree  interactions.doctree  mixtures.doctree  particles.doctree
docs/_build/html/: .buildinfo  approximations.html  exceptions.html  genindex.html  index.html  installation.html  interaction.html  interactions.html  introduction.html  mixture.html  objects.inv  particles.html  search.html  searchindex.js
docs/_build/html/_sources/: approximations.rst.txt  index.rst.txt  installation.rst.txt  interaction.rst.txt
docs/_build/html/install/: dependencies.html
docs/_build/html/tutorials/: approximations.html  interactions.html  mixtures.html  particles.html
docs/manual/: .mainpage.txt.swp  install.h  mainpage.h  mathematical_model.h
docs/tutorials/: mixtures.rst
examples/: CMakeLists.txt
examples/approximations/: CMakeLists.txt  Makefile  cvibr_multit.cpp  cvibr_sts.cpp  cvrot_sts.cpp  runall.sh
examples/basic/: CMakeLists.txt  Makefile  basicTest  basicTest.cpp  runall.sh
examples/interaction/: CMakeLists.txt  Makefile  cs_dissTest.cpp  k_dissTest.cpp  k_exchArrhTest.cpp  omegaTest.cpp  runall.sh  test_FHO.cpp  vss_and_neutral_e.cpp
examples/keras/: Makefile  h52json.sh  mixture-sts-shear-keras.cpp  plotting.py  regression_shear_NN.py  shear_N2_xat_0.900000.txt  shear_fdeep_model.json  shear_keras_model.h5  shear_viscosity_N2_xat_0.900000.txt
examples/mixtures/: CMakeLists.txt  Makefile  dirichlet.py  mixture-sts-basic_boltzman.cpp  mixture-sts-shear-bulk-thermal.cpp  mixture-sts-shear.cpp  mixture-sts-shear_compare_K_code  mixture-sts-shear_compare_K_code.cpp  mixture-sts-thermal_conductivity.cpp  mk_TC_air5_database.cpp  run_dirichlet.sh  runall.sh  thermal_conductivity.cpp  thermodiffusion.cpp
examples/mixtures/TRANSPORT_COEFFICIENTS/shear_viscosity/: N2_xat_0.900000.txt
examples/particles/: CMakeLists.txt  Makefile  dumpspectrumTest  dumpspectrumTest.cpp  particleTest  particleTest.cpp  runall.sh
scripts/: README.md  install-frugally-deep.sh  install-kappa-deps.pl  install_dependencies.py
src/: CMakeLists.txt
src/approximations/: .approximation.cpp.swp  .approximation.hpp.swp  CMakeLists.txt  approximation.cpp  approximation.hpp  approximation_multit.cpp  approximation_multit.hpp  approximation_onet.cpp  approximation_onet.hpp  approximations.hpp  exceptions.hpp  kappa.hpp  logging.hpp  models.cpp  models.h
src/interactions/: CMakeLists.txt  interaction.cpp  interaction.hpp
src/mixtures/: CMakeLists.txt  mixture.cpp  mixture.hpp
src/mixtures/trash/: mixture.1.cpp  mixture.cpp  mixture.cpp.SAVE  mixture.cpp.bkp  mixture.cpp.bkp2  mixture.cpp_new_by_george  mixture.hpp_new_by_george  mixture2.cpp
src/numerics/: CMakeLists.txt  constants.h  numeric.cpp  numeric.hpp
src/particles/: CMakeLists.txt  atom.cpp  atom.hpp  molecule.cpp  molecule.hpp  particle.cpp  particle.hpp  particles.hpp
tests/: CMakeLists.txt  cleanall.sh  run_tests.cpp  runall.sh  test_basic.cpp  test_particles.cpp  test_paths.cpp
tests/approximations/: Makefile  cvibr_multit.cpp  cvibr_sts.cpp  cvrot_sts.cpp  cvtr_sts.cpp
tests/basic/: Makefile
tests/interaction/: Makefile  N2_N2_2_2.txt  N2_N_2_2.txt  N_N_2_2.txt  R_VT.cpp  R_diss-rec.cpp  cs_dissTest.cpp  gmon.out  k_dissTest.cpp  k_diss_ILTtest.cpp  k_exchArrhTest.cpp  omegaBCEtest.cpp  omegaTest  omegaTest.cpp  test_FHO.cpp  vssTest.cpp
tests/mixtures/: Makefile  TCs_air5.txt  TestDiffusion  TestDiffusion.cpp  caching-sts.cpp  diff_N2_N_xat10.txt  diffusion.txt  gmon.out  ionized_mixture_creation.cpp  mixture-sts-basic  mixture-sts-basic.cpp  mixture-sts-basic_boltzman.cpp  mixture-sts-basic_mixtureName.cpp  mixture-sts-bulk  mixture-sts-bulk.cpp  mixture-sts-bulk_REAL_DISTR.cpp  mixture-sts-bulk_air5.cpp  mixture-sts-shear  mixture-sts-shear-bulk-thermal  mixture-sts-shear-bulk-thermal.cpp  mixture-sts-shear-oxygen.cpp  mixture-sts-shear.cpp  mixture-sts-shear_compare_K_code.cpp  mixture-sts-thermal_conductivity  mixture-sts-thermal_conductivity.cpp  mixture-sts-thermo-diffusion.cpp  mixture_string_creation.cpp  mk_TC_air5_database  molar_fractions10.out  thd_N2_N_xat10.000000.txt  thd_N2_N_xat95.txt  thd_sts_N2_N_xat95.txt  thermal_conductivity  thermal_conductivity.cpp  thermodiffusion  thermodiffusion.cpp  transport_coefficients.cpp  transport_coefficients_air5  transport_coefficients_air5.cpp
tests/mixtures/TRANSPORT_COEFFICIENTS/bulk_viscosity/: N2_xat_0.900000.txt  O2_xat_0.900000.txt  air5_xat25.txt
tests/mixtures/TRANSPORT_COEFFICIENTS/shear_viscosity/: O2_xat_0.900000.txt
tests/mixtures/TRANSPORT_COEFFICIENTS/thermal_conductivity/: N2_N.txt  N2_N_xat10.txt  O2_O_xat10.txt
tests/particles/: Makefile  dumpspectrumTest.cpp  particleTest.cpp
tests/speed/: Makefile  basicspeedtest.cpp
(+4 files in other folders)
